Store Criado o fluxo para cadastrar uma loja.